# seminar_dynamic_students

./: main.c
s3_students_code/s3_students_code/: CMakeLists.txt  common.h  main.c  seminar_3.c  seminar_3.h
s3_students_code/s3_students_code/resources/: books.txt  clients.txt  courses.txt  input.txt  students.txt
